# score-addon-aja

./: .gitmodules  CMakeLists.txt  VideoIOCaps.hpp  VideoIOSettings.cpp  VideoIOSettings.hpp  VideoInput.cpp  VideoInput.hpp  VideoOutput.cpp  VideoOutput.hpp  score_addon_videoio.cpp  score_addon_videoio.hpp
AJA/: AJACaptureSession.cpp  AJACaptureSession.hpp  AJACpuCapture.hpp  AJAInput.cpp  AJAInput.hpp  AJAInputNode.cpp  AJAInputNode.hpp  AJAOutput.cpp  AJAOutput.hpp  AJAOutputNode.cpp  AJAOutputNode.hpp  AjaDmaLock.hpp  AjaDmaLockPolicy.hpp  AjaDvpEncoder.hpp  AjaFormatMap.hpp  AjaOutputBackend.cpp  AjaOutputBackend.hpp  CaptureInteropCpu.hpp  CaptureInteropD3D11Dvp.hpp  CaptureInteropD3D11Tier3.hpp  CaptureInteropGLDvp.hpp  CaptureInteropGLTier3.hpp  CaptureInteropVulkanTier3.hpp  RdmaInteropD3D11Dvp.hpp  RdmaInteropD3D11Tier3.hpp  RdmaInteropD3D12Tier3.hpp  RdmaInteropGLDvp.hpp  RdmaInteropGLTier3.hpp  RdmaInteropVulkanTier3.hpp  Tier3Common.hpp
bluefish/: Bluefish.hpp  BluefishCaptureNode.cpp  BluefishCaptureNode.hpp  BluefishCpuCapture.hpp  BluefishDevices.cpp  BluefishDevices.hpp  BluefishFormats.hpp  BluefishInputBackend.cpp  BluefishInputBackend.hpp  BluefishNode.cpp  BluefishNode.hpp  BluefishOutputBackend.cpp  BluefishOutputBackend.hpp  BluefishSettings.hpp
cmake/: gen_decklink_headers.sh
decklink/: DeckLink.hpp  DeckLinkCaptureNode.cpp  DeckLinkCaptureNode.hpp  DeckLinkComPtr.hpp  DeckLinkCpuCapture.hpp  DeckLinkDevices.cpp  DeckLinkDevices.hpp  DeckLinkFormats.hpp  DeckLinkInputBackend.cpp  DeckLinkInputBackend.hpp  DeckLinkModeMap.hpp  DeckLinkNode.cpp  DeckLinkNode.hpp  DeckLinkOutputBackend.cpp  DeckLinkOutputBackend.hpp
deltacast/: Deltacast.hpp  DeltacastCaptureNode.cpp  DeltacastCaptureNode.hpp  DeltacastCpuCapture.hpp  DeltacastDevices.cpp  DeltacastDevices.hpp  DeltacastFormats.hpp  DeltacastInputBackend.cpp  DeltacastInputBackend.hpp  DeltacastNode.cpp  DeltacastNode.hpp  DeltacastOutputBackend.cpp  DeltacastOutputBackend.hpp  DeltacastRdmaCapture.hpp  DeltacastRdmaOutput.hpp
gpudirect/: DmaLockPolicy.hpp  DvpCaptureD3D11.hpp  DvpCaptureGl.hpp  DvpOutputD3D11.hpp  DvpOutputGl.hpp
magewell/: Magewell.hpp  MagewellCaptureNode.cpp  MagewellCaptureNode.hpp  MagewellCpuCapture.hpp  MagewellDevices.cpp  MagewellDevices.hpp  MagewellFormats.hpp  MagewellInputBackend.cpp  MagewellInputBackend.hpp
tests/: AJARoundtrip.cpp  aja_rgb_repro.cpp
